# fastapi-playground

./: .editorconfig  .gitignore  Dockerfile  README.md  main.py  paginator.py  pyproject.toml  test_main.http
.github/workflows/: docker-image.yml  python-app.yml  test-and-build.yml
playground/: database.py  main.py  paginator.py
playground/providers/: database.py  database_async.py  settings.py
playground/routers/: auditing.py  auth_passthrough.py  health.py  http_audited.py  http_authorized.py  paginator.py  time_range.py
tests/: conftest.py  test_database.py  test_mimesis.py  test_paginator.py  test_schematesis.py  test_time_range.py
tests/providers/: test_database.py  test_database_async.py
tests/routers/: test_auditing.py  test_auth_passthrough.py  test_http_audited.py  test_paginator.py  test_time_range.py
tests/routers/snapshots/test_http_audited/test_http_audit_fail/: http_audit_fail
tests/routers/snapshots/test_http_audited/test_http_audit_success/: http_audit_success
