[tool.poetry]
name = "fastapi-paginator"
version = "0.1.0"
description = ""
authors = ["requinard <david@requinard.nl>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.78.0"}
uvicorn = "^0.17.6"
pytest = "^7.1.2"
sqlmodel = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
