[tool.poetry]
name = "fastapi-paginator"
version = "0.1.0"
description = ""
authors = ["requinard <david@requinard.nl>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["all"], version = "^0.78.0" }
uvicorn = "^0.17.6"
sqlmodel = "^0.0.6"
uuid = "^1.30"
msgpack-asgi = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.960"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
plugins = ['pydantic.mypy']

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
