[tool.poetry]
name = "fastapi-paginator"
version = "0.1.0"
description = ""
authors = ["requinard <david@requinard.nl>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["all"], version = "^0.78.0" }
uvicorn = "^0.17.6"
sqlmodel = "^0.0.6"
uuid = "^1.30"
msgpack-asgi = "^1.1.0"
pyproject-flake8 = "^0.0.1-alpha.4"
pytest-mimesis = "^1.1.0"
httpx = "^0.23.0"
aiosqlite = "^0.17.0"
async-lru = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.960"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
pytest-repeat = "^0.9.1"
respx = "^0.19.2"
anyio = {extras = ["trio"], version = "^3.6.1"}
hypothesis = "^6.46.9"
schemathesis = "^3.15.2"
pytest-clarity = "^1.0.1"
pytest-fast-first = "^1.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "apitest: mark a test as once that interacts with the API. These can be slow.",
]

[tool.mypy]
python_version = "3.10"
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
plugins = ['pydantic.mypy']

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.flake8]
max_line_length = 180
